<resources>
    <string name="app_name">GitHub User\'s Search</string>
    <string name="github_slogan">Where the world builds software</string>
    <string name="github">Github</string>
    <string name="logo_github">Logo Github</string>
    <string name="accounts_name">John Doe</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="repository">Repository</string>
    <string name="tab_text_1">Following</string>
    <string name="tab_text_2">Followers</string>
    <string name="search">Search user</string>
    <string name="search_hint">Search user</string>
    <string name="empty_user_not_found">Empty - User not found</string>
    <string name="title_activity_user_fav">UserFavActivity</string>
    <!-- Strings used for fragments for navigation -->

    <string name="button_add">Button Add</string>
    <string name="favourite_user">Favourite User</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="setting">Setting</string>
</resources>