<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.detailactivity.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/item_detail_avatar"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_centerHorizontal="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/item_detail_name"
            style="@style/HeadingStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/item_detail_avatar"
            app:layout_constraintStart_toStartOf="@+id/item_detail_avatar"
            app:layout_constraintTop_toBottomOf="@+id/item_detail_avatar"
            tools:text="TextView" />

        <TextView
            android:id="@+id/item_detail_username"
            style="@style/SubheadingStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/item_detail_name"
            app:layout_constraintStart_toStartOf="@+id/item_detail_name"
            app:layout_constraintTop_toBottomOf="@+id/item_detail_name"
            tools:text="TextView" />

        <TextView
            android:id="@+id/item_detail_following"
            style="@style/SubheadingStyle_Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/item_detail_followers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_detail_username"
            tools:text="43" />

        <TextView
            android:id="@+id/item_detail_followers"
            style="@style/SubheadingStyle_Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/item_detail_username"
            app:layout_constraintStart_toStartOf="@+id/item_detail_username"
            app:layout_constraintTop_toBottomOf="@+id/item_detail_username"
            tools:text="43" />

        <TextView
            android:id="@+id/item_detail_repository"
            style="@style/SubheadingStyle_Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/item_detail_followers"
            app:layout_constraintTop_toBottomOf="@+id/item_detail_username"
            tools:text="43" />

        <TextView
            android:id="@+id/item_detail_company"
            style="@style/SubheadingStyle_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="@+id/textView27"
            app:layout_constraintStart_toStartOf="@+id/textView27"
            app:layout_constraintTop_toBottomOf="@+id/textView27"
            tools:text="432" />

        <TextView
            android:id="@+id/item_detail_location"
            style="@style/SubheadingStyle_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="@+id/item_detail_company"
            app:layout_constraintEnd_toEndOf="@+id/textView29"
            app:layout_constraintStart_toStartOf="@+id/textView29"
            app:layout_constraintTop_toTopOf="@+id/item_detail_company"
            tools:text="San - Jose" />

        <TextView
            android:id="@+id/textView27"
            style="@style/SubheadingStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            app:layout_constraintEnd_toEndOf="@+id/item_detail_following"
            app:layout_constraintStart_toStartOf="@+id/item_detail_following"
            app:layout_constraintTop_toBottomOf="@+id/item_detail_following" />

        <TextView
            android:id="@+id/textView2"
            style="@style/SubheadingStyle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            app:layout_constraintEnd_toEndOf="@+id/item_detail_followers"
            app:layout_constraintStart_toStartOf="@+id/item_detail_followers"
            app:layout_constraintTop_toBottomOf="@+id/item_detail_followers" />

        <TextView
            android:id="@+id/textView29"
            style="@style/SubheadingStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repository"
            app:layout_constraintEnd_toEndOf="@+id/item_detail_repository"
            app:layout_constraintStart_toStartOf="@+id/item_detail_repository"
            app:layout_constraintTop_toBottomOf="@+id/item_detail_repository" />

        <TextView
            android:id="@+id/textView30"
            style="@style/SubheadingStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company"
            app:layout_constraintEnd_toEndOf="@+id/item_detail_company"
            app:layout_constraintStart_toStartOf="@+id/item_detail_company"
            app:layout_constraintTop_toBottomOf="@+id/item_detail_company" />

        <TextView
            style="@style/SubheadingStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            app:layout_constraintEnd_toEndOf="@+id/item_detail_location"
            app:layout_constraintStart_toStartOf="@+id/item_detail_location"
            app:layout_constraintTop_toBottomOf="@+id/item_detail_location" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView30"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@android:color/black"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_add_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_add"
            app:fabSize="normal"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:srcCompat="@drawable/ic_fav" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>

